--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "default-passive-events": "^2.0.0",
     "vant": "^3.2.7",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0",
